--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,13 +1,10 @@
-# This workflow will check flake style
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: style
 
 on: [push, pull_request]
 
 jobs:
   style:
-    runs-on: opendilab/didrive-ci:0.1.0
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7]
