--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           python -m pip install .
           python -m pip install sphinx_rtd_theme sphinx
+          wget http://opendilab.org/download/DI-drive/carla-0.9.9-py3.7-linux-x86_64.egg
+          easy_install carla-0.9.9-py3.7-linux-x86_64.egg
           make -C ./docs html
           mv docs/build/html public
           rm -rf docs/build
