--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   doc:
-    runs-on: opendilab/didrive-ci:0.1.0
+    runs-on: ubuntu-latest
+    container: opendilab/didrive-ci:0.1.0
     strategy:
       matrix:
         python-version: [3.7]
