--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -2,9 +2,7 @@ name: doc
 
 on:
   push:
-    branches: [main, 'doc/*']
-  pull_request:
-    branches: [main, 'doc/*']
+    branches: [main, 'doc/*', 'gl-dev/*']
 
 jobs:
   doc:
@@ -15,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Generate
         run: |
-          python -m pip install .[doc]
+          python3 -m pip install .[doc]
           make -C ./docs html
           mv docs/build/html public
           rm -rf docs/build
