--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,10 +1,10 @@
-name: doc
+name: Docs Deploy
 
 on:
   push:
-    branches: [main, 'doc/*']
-  pull_request:
-    branches: [main]
+    branches: [ main, 'doc/*', 'dev/*' ]
+  release:
+    types: [ published ]
 
 jobs:
   doc:
@@ -19,10 +19,19 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y make wget curl cloc graphviz pandoc
+          dot -V
+          python -m pip install -e .[doc]
+          python -m pip install carla
       - name: Generate
         run: |
-          python -m pip install .[doc]
-          python -m pip install carla
+          git fetch --all --tags
+          git branch -av
+          git remote -v
+          git tag
           make -C ./docs html
           mv docs/build/html public
           rm -rf docs/build
