--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,4 +1,4 @@
-name: style
+name: Style and Badge
 
 on: [push, pull_request]
 
@@ -24,3 +24,31 @@ jobs:
           python -m pip install .[style]
           bash format.sh ./core --test
           flake8 ./core
+      - name: Download cloc
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y cloc
+      - name: Get the Numbers
+        run: |
+          cloc .
+          echo "CODE_LINES=$(./cloc.sh --loc)" >> $GITHUB_ENV
+          echo "COMMENT_LINES=$(./cloc.sh --percentage)%" >> $GITHUB_ENV
+      - name: Create Lines-of-Code-Badge
+        uses: schneegans/dynamic-badges-action@v1.0.0
+        with:
+          auth: ${{ secrets.GIST_SECRET }}
+          gistID: ${{ secrets.BADGE_GIST_ID }}
+          filename: loc.json
+          label: Lines of Code
+          message: ${{ env.CODE_LINES }}
+          color: lightgrey
+      - name: Create Comments-Badge
+        uses: schneegans/dynamic-badges-action@v1.0.0
+        with:
+          auth: ${{ secrets.GIST_SECRET }}
+          gistID: ${{ secrets.BADGE_GIST_ID }}
+          filename: comments.json
+          label: Comments
+          message: ${{ env.COMMENT_LINES }}
+          color: green
+
